# swc-plugin-console-prefix

./: .gitignore  Cargo.toml  README.md
src/: lib.rs
