[package]
name = "swc-plugin-console-prefix"
version = "0.3.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.54"
serde = "1.0.136"
serde_json = "1.0.79"
swc_plugin = "0.47.0"

[dev-dependencies]
js-sys = "0.3.57"
swc = { version = "0.168.0", features = ["plugin"] }
swc_common = { version = "0.17.21", features = ["tty-emitter"] }
swc_ecma_parser = "0.102.2"
swc_ecma_transforms_testing = "0.80.0"

[[example]]
name = "usage"